[fix]:timeline-settings-block alignment

--- a/frontend/src/components/ControlPanel.css
+++ b/frontend/src/components/ControlPanel.css
@@ -132,6 +132,16 @@
   gap: 10px;
 }
 
+.timeline-settings-block {
+  box-sizing: border-box; /* 確保邊框不影響高度計算 */
+  border: 1px solid rgb(63, 63, 63);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  gap: 10px;
+}
+
 .waveform-setting-block {
   min-height: 17%;
   width: 100%;
